[package]
name = "biased-work-queues"
version = "0.1.0"
authors = ["Robert O'Callahan <robert@ocallahan.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7"
num_cpus = "1"
rayon = "1.0"
structopt = "0.3"

[profile.release]
debug = true
